# business-management-system

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_12_0236-f01d2d86b3d5_create_users_and_access_tokens.py
app/: main.py
app/actions/: seed.py
app/admin/: admin.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  auth.py  calendar.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
app/authentication/: backend.py  dependencies.py  fastapi_users_object.py  strategy.py  user_manager.py
app/core/: config.py  db_helper.py  permissions.py
app/dependencies/: role_dependencies.py
app/errors/: exception_handlers.py  exceptions.py  schemas.py
app/models/: __init__.py  access_token.py  association.py  base.py  comment.py  evaluation.py  meeting.py  task.py  team.py  user.py
app/schemas/: calendar.py  comment.py  evaluation.py  meeting.py  task.py  team.py  user.py
app/service/: calendar_service.py  meeting_service.py
app/utils/: case_converter.py
app/web/: dependencies.py  middleware.py  routes.py
app/web/templates/: base.html  index.html
app/web/templates/auth/: login.html  register.html
app/web/templates/calendar/: index.html
app/web/templates/dashboard/: index.html
app/web/templates/meetings/: index.html
app/web/templates/profile/: index.html
app/web/templates/tasks/: index.html
app/web/templates/teams/: index.html
migrations/: env.py
migrations/versions/: 2025_11_12_0236-f01d2d86b3d5_create_users_and_access_tokens.py  2025_11_21_0131-7b99f6fdbf86_create_team_model.py  2025_11_26_0010-8e31e39fdebe_create_comment_evaluation_task_models.py  2025_11_27_0133-ad7e067eec55_create_meeting_model.py  2025_12_08_0452-a2c8007ff857_add_timezone_to_task_deadline.py
tests/: conftest.py  helpers.py
tests/configuration/: test_calendar.py  test_comments.py  test_evaluations.py  test_integrations.py  test_meetings.py  test_tasks.py  test_teams.py
tests/permissions/: test_permissions.py
