[project]
name = "business-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select=["ALL"]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D205",
    "D212",
    "D413",
    "PLR0913",
    "S104",
    "D101",
    "D103",
]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
