[project]
name = "business-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "sqladmin>=0.22.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select=["ALL"]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D205",
    "D212",
    "D413",
    "PLR0913",
    "S104",
    "D101",
    "D103",
    "DTZ001",
    "DTZ011",
]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

markers = [
    "integration: Integration tests with database",
]

filterwarnings = "ignore::DeprecationWarning:.*pydantic_core.*"

[tool.coverage.report]
show_missing = true
skip_empty = true
